[package]
name = "revm-proxy-db"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
revm = { version = "19.0", default-features = false, features = ["alloydb", "dev", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
